tests/snapshots/runtime_error_fixtures/base_map_callback_arity.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/base_map_callback_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • examples/runtime_errors/base_map_callback_arity.flx
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/runtime_errors/base_map_callback_arity.flx:2:19
  |
2 |     let ignored = map(#[1], concat)
  |                   ^^^^^^^^^^^^^^^^^
  |                   ----------------- parameter 1 has type `Array<Int>`

  |                   ----------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<Int>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.
